--- a/quantumultx/Online.conf
+++ b/quantumultx/Online.conf
@@ -1,7 +1,9 @@
 [general]
+network_check_url=http://www.aliyun.com
 server_check_url=http://www.gstatic.com/generate_204
+server_check_timeout=2000
 resource_parser_url= https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
-geo_location_checker= http://api.live.bilibili.com/ip_service/v1/ip_service/get_ip_addr?, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_bili_cn.js
+geo_location_checker= disabled
 excluded_routes=192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8
 
 [dns]
@@ -14,22 +16,9 @@ address=/mtalk.google.com/108.177.125.188
 [policy]
 static=Netflix,server-tag-regex=SG
 
-[server_local]
-
 [server_remote]
 https, tag=Nexitally, update-interval=-1, opt-parser=false, enabled=true
 https, tag=DlerCloud, update-interval=-1, opt-parser=false, enabled=true
-
-[filter_local]
-host-suffix, local, direct
-ip-cidr, 192.168.0.0/16, direct
-ip-cidr, 10.0.0.0/8, direct
-ip-cidr, 172.16.0.0/12, direct
-ip-cidr, 127.0.0.0/8, direct
-ip-cidr, 100.64.0.0/10, direct
-ip-cidr, 224.0.0.0/4, direct
-geoip,cn,direct
-final, proxy
 
 [filter_remote]
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list, tag=Reject, force-policy=reject, update-interval=0, opt-parser=true, enabled=true
@@ -44,10 +33,33 @@ https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.l
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/apple.list, tag=Apple, force-policy=proxy, update-interval=0, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list, tag=China, force-policy=direct, update-interval=0, opt-parser=true, enabled=true
 
-[rewrite_local]
-
 [rewrite_remote]
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/quantumultx/Rewrite.conf, tag=Rewrite, update-interval=0, enabled=true
+
+[server_local]
+
+[filter_local]
+host-suffix, local, direct
+ip-cidr, 192.168.0.0/16, direct
+ip-cidr, 10.0.0.0/8, direct
+ip-cidr, 172.16.0.0/12, direct
+ip-cidr, 127.0.0.0/8, direct
+ip-cidr, 100.64.0.0/10, direct
+ip-cidr, 224.0.0.0/4, direct
+geoip,cn,direct
+final, proxy
+
+[rewrite_local]
+# Redirect Google Search Service
+^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
+# Redirect Google Maps Service
+^https?:\/\/(ditu|maps).google\.cn url 302 https://maps.google.com
+# Redirect HTTP to HTTPS
+^https?:\/\/(www.)?taobao\.com\/ url 302 https://taobao.com/
+^https?:\/\/(www.)?jd\.com\/ url 302 https://www.jd.com/
+^https?:\/\/(www.)?mi\.com\/ url 302 https://www.mi.com/
+^https?:\/\/you\.163\.com\/ url 302 https://you.163.com/
+^https?:\/\/(www.)?suning\.com\/ url 302 https://suning.com/
+^https?:\/\/(www.)?yhd\.com\/ url 302 https://yhd.com/
 
 [task_local]
 
@@ -55,3 +67,4 @@ https://raw.githubusercontent.com/jmjiaaz/Profiles/main/quantumultx/Rewrite.conf
 
 [mitm]
 skip_validating_cert = true
+hostname = *.google.cn
