--- a/quantumultx/Online.conf
+++ b/quantumultx/Online.conf
@@ -17,21 +17,21 @@ address=/mtalk.google.com/108.177.125.188
 static=Netflix,server-tag-regex=SG
 
 [server_remote]
-https, tag=Nexitally, update-interval=-1, opt-parser=false, enabled=true
-https, tag=DlerCloud, update-interval=-1, opt-parser=false, enabled=true
+https, tag=Nexitally, opt-parser=false, enabled=true
+https, tag=Maying, opt-parser=false, enabled=true
 
 [filter_remote]
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list, tag=Reject, force-policy=reject, update-interval=0, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list, tag=Netflix, force-policy=Netflix, update-interval=0, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list, tag=Spotify, force-policy=proxy, update-interval=0, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list, tag=YouTube, force-policy=proxy, update-interval=0, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/streaming_others.list, tag=Streaming, force-policy=proxy, update-interval=0, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list, tag=Telegram, force-policy=proxy, update-interval=0, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list, tag=Google, force-policy=proxy, update-interval=0, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list, tag=Microsoft, force-policy=proxy, update-interval=0, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list, tag=Global, force-policy=proxy, update-interval=0, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/apple.list, tag=Apple, force-policy=proxy, update-interval=0, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list, tag=China, force-policy=direct, update-interval=0, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list, tag=Reject, force-policy=reject, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list, tag=Netflix, force-policy=Netflix, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list, tag=Spotify, force-policy=proxy, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list, tag=YouTube, force-policy=proxy, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/streaming_others.list, tag=Streaming, force-policy=proxy, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list, tag=Telegram, force-policy=proxy, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list, tag=Google, force-policy=proxy, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list, tag=Microsoft, force-policy=proxy, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list, tag=Global, force-policy=proxy, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/apple.list, tag=Apple, force-policy=proxy, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list, tag=China, force-policy=direct, opt-parser=true, enabled=true
 
 [rewrite_remote]
 
