--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -12,14 +12,13 @@ show-error-page-for-reject = true
 ipv6 = true
 disable-geoip-db-auto-update = false
 exclude-simple-hostnames = true
-geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 http-api-tls = false
 http-api-web-dashboard = false
 use-local-host-item-for-proxy = true
-network-framwork = false
+all-hybrid = true
 
 [Replica]
-hide-apple-request = 0
+hide-apple-request = 1
 hide-crash-reporter-request = 1
 hide-udp = 1
 keyword-filter-type = none
@@ -41,7 +40,7 @@ RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/apple.list,PROXY
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list,DIRECT
 RULE-SET,LAN,DIRECT
-GEOIP,CN,DIRECT
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china_ip.list,DIRECT
 FINAL,PROXY,dns-failed
 
 [Host]
