--- a/quantumultx/Online.conf
+++ b/quantumultx/Online.conf
@@ -32,6 +32,7 @@ https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsof
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list, tag=Global, force-policy=proxy, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/apple.list, tag=Apple, force-policy=proxy, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list, tag=China, force-policy=direct, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china_ip.list, tag=ChinaIP, force-policy=direct, opt-parser=true, enabled=true
 
 [rewrite_remote]
 
@@ -45,7 +46,6 @@ ip-cidr, 172.16.0.0/12, direct
 ip-cidr, 127.0.0.0/8, direct
 ip-cidr, 100.64.0.0/10, direct
 ip-cidr, 224.0.0.0/4, direct
-geoip,cn,direct
 final, proxy
 
 [rewrite_local]
