--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -24,8 +24,11 @@ hide-udp = 1
 keyword-filter-type = none
 
 [Proxy Group]
-PROXY = select, policy-path=***, update-interval=0, no-alert=0, hidden=0
-Netflix = select, policy-path=***, update-interval=0, no-alert=0, hidden=0
+PROXY = select, update-interval=-1, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=机场1, 机场2, 机场3
+Netflix = select, update-interval=-1, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=机场1, 机场2, 机场3
+机场1 = select, policy-path=***, update-interval=-1, no-alert=0, hidden=1, include-all-proxies=0
+机场2 = select, policy-path=***, update-interval=-1, no-alert=0, hidden=1, include-all-proxies=0
+机场3 = select, policy-path=***, update-interval=-1, no-alert=0, hidden=1, include-all-proxies=0
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list,REJECT
